--- a/app/src/main/res/layout/fragment_scroll.xml
+++ b/app/src/main/res/layout/fragment_scroll.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScrollFragment">
+    tools:context=".view.ScrollFragment">
 
     <View
         android:layout_width="match_parent"
@@ -24,6 +24,18 @@
         android:background="@color/purple_500"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/v_horizontal"/>
+
+    <TextView
+        android:id="@+id/tv_city_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/v_horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_forecast_list"
@@ -52,5 +64,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/v_horizontal" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
